Add feature of getting user info via jwt token.
